# semnav

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ekf_fusion_turtlebot.yaml  ekf_fusion_turtlebot_semslam.yaml
extras/meshes/: cart.mat  chair.mat  gascan.mat  ladder.mat  pelican.mat  tableclosed.mat
extras/object_pose_interface_msgs/: CMakeLists.txt  package.xml
extras/object_pose_interface_msgs/msg/: Classification.msg  KeypointDetection3D.msg  KeypointDetections3D.msg  ObjectClass.msg  SemanticMapObject.msg  SemanticMapObjectArray.msg
include/: polygeom_lib.h  reactive_planner_lib.h
launch/: bringup_minitaur.launch  bringup_spirit.launch  bringup_turtlebot.launch  navigation_debug.launch  navigation_spirit_humanfollowing_onboard.launch  navigation_spirit_humanfollowingsignal_onboard.launch  navigation_turtlebot_humanfollowing_onboard.launch  navigation_turtlebot_humanfollowingfallen_onboard.launch  navigation_turtlebot_humanfollowingsignal_onboard.launch  navigation_turtlebot_humans_onboard.launch  navigation_turtlebot_offboard.launch  navigation_turtlebot_onboard.launch  navigation_turtlebot_semantic_offboard.launch  navigation_turtlebot_semantic_onboard.launch  tracking_spirit_semslam_indoor.launch  tracking_spirit_semslam_outdoor.launch  tracking_turtlebot_datacollection_vicon.launch  tracking_turtlebot_playback.launch  tracking_turtlebot_semslam_offboard.launch  tracking_turtlebot_semslam_onboard.launch
src/: fake_lidar_publisher.cpp  fake_odometry_publisher.cpp  human_following.cpp  human_following_fallen.cpp  human_following_signal.cpp  map_debug.cpp  navigation.cpp  navigation_humans.cpp  navigation_semantic.cpp
src/libraries/: polygeom_lib.cpp  polygeom_lib.py  reactive_planner_lib.cpp  reactive_planner_lib.py  ros_functions.py  visualization.py
src/tracking/: semslam_polygon_publisher.py
